27. Fixed numerous PSScriptAnalyzer Warnings
28. Re-wrote Get-UserWithThumbnail so it outputs objects.
29. Fixed numerous PSScriptAnalyzer Information level Severity issues.
30. Prepared WS_DomainMgmt sub-module for external help.
31. Began preparing WSTools root module for external help.

Removed items:
1. Get-202001UpdateStatus: We are in August 2020 now so if computers don't have newer cumulative updates there is a problem.
2. Get-DNSInfo: Not functioning and redundant.
3. Import-WSToolsConfig changed process for editing the module so this is no longer needed.
4. Open-WSToolsManifests and Open-WSToolsModules changed process for editing the module so this is no longer needed.
5. Add-CreatedPriorTo2017 and Add-Link. These are no longer needed since moving to Visual Studio Code for editing.

######################
#                    #
#      v1.2.2        #
#    June 2020       #
######################
Known issues:
1. Get-OperatingSystem displays computers as 32-bit when running the command against a computer the logged in user does not have admin rights on.

Bug fixes:
1. Fixed issue with Install-Patches using an incorrect file path.
2. Changed the InstallRemote.ps1 Windows and Office cab file install so that it doesn't automatically restart computers.

New features and other changes:
1. Added Save-UpdateHistory.
2. Added Save-MaintenanceReport.
3. Added $UHpath to config file for setting path on Save-UpdateHistory and Save-MaintenanceReport. Bumped config file to version 1.0.3.
4. Added compatability for Windows 10 v2004 (Build 19041 May 2020 release) to Get-OperatingSystem.
5. Added Ignore list to config file.
6. Added AppRepo to config file.
7. Changed Get-UpTime to also show total hours up, days, hours, minutes, and seconds.

######################
#                    #
#      v1.2.1        #
#     May 2020       #
######################
Known issues: